// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioItem renders RadioItem component 1`] = `
<DocumentFragment>
  <div
    class="RadioItem"
  >
    <input
      type="radio"
    />
    <label
      class="RadioItem__Content"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioItem renders RadioItem component disabled 1`] = `
<DocumentFragment>
  <div
    class="RadioItem"
  >
    <input
      disabled=""
      type="radio"
    />
    <label
      class="RadioItem__Content"
    />
  </div>
</DocumentFragment>
`;

exports[`RadioItem renders RadioItem component with children 1`] = `
<DocumentFragment>
  <div
    class="RadioItem"
  >
    <input
      type="radio"
    />
    <label
      class="RadioItem__Content"
    >
      <div
        class="FieldSet--LoadingState"
      >
        <span
          class="stx-loading-spinner"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`RadioItem renders RadioItem component with data 1`] = `
<DocumentFragment>
  <div
    class="RadioItem"
  >
    <input
      checked=""
      id="1"
      name="testRadio"
      type="radio"
    />
    <label
      class="RadioItem__Content"
      for="1"
    />
  </div>
</DocumentFragment>
`;
